<resources>
    <string name="app_name">Reviewer App</string>
    <string name="for_profile">For profile</string>
    <string name="lessons">Lessons</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="analytics">Analytics</string>
    <string name="for_settings">For settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
</resources>