<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="@dimen/_30dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:contentDescription="@string/for_profile"
        android:src="@drawable/profile"/>

    <ImageView
        android:id="@+id/settingsImage"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginVertical="@dimen/_30dp"
        android:contentDescription="@string/for_settings"
        android:src="@drawable/settings"/>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profileImage"
        android:layout_above="@id/tabHolder"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabLessons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessons"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabBookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmarks"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAnalytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics"/>
    </com.google.android.material.tabs.TabLayout>

</RelativeLayout>